--- a/_vite_tmp/index.html
+++ b/_vite_tmp/index.html
@@ -1,14 +1,13 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>美股均薄成本 & 投资回报（含 moomoo 手续费）</title>
+    <title>vite-tmp</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
